@@ -1,3 +1,9 @@
+2008-10-27	DJ Lucas	<dj@linuxfromscratch.org>
+	* lfs/init.d/cleanfs: Removed '! -newer /proc' from find commands in
+	  check for stale files in /var/lock and /var/run.
+	* Makefile: Reversed cleanfs and udev_retry scripts so that cleanfs
+	  runs immediately after mountfs.
+
 2008-10-26	Dan Nicholson	<dnicholson@linuxfromscratch.org>
 	* lfs/init.d/functions: Remove stale pid files when encountered
 	  in loadproc/killproc/reloadproc. When the bootscript specifies
@@ -10,7 +16,7 @@
 	  been accepted upstream.
 
 2008-05-21	Bryan Kadzban	<bryan@linuxfromscratch.org>
-	* lfs/init.d/udev: lfs/init.d/udev_retry: Use new udevadm program.
+	* lfs/init.d/udev, lfs/init.d/udev_retry: Use new udevadm program.
 
 2007-08-20	DJ Lucas	<dj@linuxfromscratch.org>
 	* lfs/init.d/setclock: Added missing 'stop' argument to usage text
@@ -108,6 +114,7 @@ n/a - June 2, 2006
 	* Removed console config file and makefile targets.
 	* Removed references to /dev/bug and bugreport in udevand 
 	  udev_retry bootscripts. (DJ Lucas)
+
 n/a - April 17, 2006
 	* Updated udev script to use the new udevsettle program.
 	* Added udev_retry script for systems that have /usr on a different
